# repo-doctor

./: .flake8  .gitignore  CLAUDE.md  CODEBASE_ALIGNMENT_ASSESSMENT.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  LLM_IMPLEMENTATION_SUMMARY.md  LLM_INTEGRATION.md  Makefile  README.md  START_LLM_SERVER.md  STREAM_A_IMPLEMENTATION_SUMMARY.md  TESTING_COMPLETION_SUMMARY.md  TEST_ISSUES.md  config-example.yaml  pyproject.toml  repo-doctor-spec.md  setup_dev.sh  test_agent_integration.py  test_learning_system.py  test_llm_integration.py  test_smart_llm_discovery.py
.cursor/rules/: repo-doctor.mdc
docs/: AGENT_CONTRACTS.md  AGENT_IMPLEMENTATION_GUIDE.md  AGENT_SYSTEM_SUMMARY.md  LEARNING_PLAN.md  LLM_ENHANCEMENT_PLAN.md  PERFORMANCE_FEATURES.md  TOKEN_SETUP_GUIDE.md  TROUBLESHOOTING.md
docs/archive/: IMPLEMENTATION_STATUS.md  LLM_IMPLEMENTATION_SUMMARY.md
outputs/: .gitkeep  README.md
repo_doctor/: __init__.py  cli.py  config_template.yaml  presets.py
repo_doctor/agents/: __init__.py  analysis.py  contracts.py  profile.py  resolution.py
repo_doctor/cache/: __init__.py  github_cache.py
repo_doctor/conflict_detection/: __init__.py  cuda_matrix.py  detector.py  pip_parser.py
repo_doctor/knowledge/: __init__.py  base.py  storage.py
repo_doctor/learning/: __init__.py  adaptive_learning.py  data_quality_validator.py  enhanced_analysis_agent.py  enhanced_resolution_agent.py  feature_extractor.py  learning_dashboard.py  ml_data_storage.py  ml_knowledge_base.py  pattern_discovery.py  strategy_predictor.py
repo_doctor/models/: __init__.py  analysis.py  resolution.py  system.py
repo_doctor/strategies/: __init__.py  base.py  conda.py  docker.py  micromamba.py  venv.py
repo_doctor/utils/: __init__.py  config.py  env.py  github.py  llm.py  llm_discovery.py  logging_config.py  parsers.py  system.py
repo_doctor/validators/: __init__.py  container.py
test_repos/: test_compatibility_detection.py  test_local_analysis.py  test_vibevoice_compatibility.py
test_repos/worldgen_test/: README.md  requirements.txt  setup.py
tests/: __init__.py  conftest.py  test_agent_contracts.py  test_agent_integration.py  test_agents.py  test_agents_comprehensive.py  test_cli.py  test_conflict_detection.py  test_container_validator.py  test_feature_extractor.py  test_github_cache.py  test_github_utils.py  test_integration.py  test_knowledge_base_corrected.py  test_knowledge_storage_corrected.py  test_learning_integration.py  test_learning_system.py  test_llm_comprehensive.py  test_llm_edge_cases.py  test_llm_focused.py  test_llm_integration.py  test_llm_with_repos.py  test_micromamba_strategy.py  test_models.py  test_output_directory.py  test_parsers.py  test_real_repositories.py  test_smart_llm_discovery.py  test_strategies.py  test_system_utils.py
