[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-doctor"
version = "0.1.0"
description = "A command-line tool for analyzing and maintaining Git repositories"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "docker>=7.0.0",
    "rich>=13.0.0",
    "pygithub>=2.0.0",
    "pypi-simple>=1.0.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0.0",
    "psutil>=5.9.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
agents = [
    "langchain>=0.1.0",
    "openai>=1.0.0",
    "chromadb>=0.4.0",
]

[project.scripts]
repo-doctor = "repo_doctor.cli:main"
